yoshimi 1.5.7 M

2018-5-2 Will
* Further improvements to CLI handling of instances.
* Started preparation for possible singluar set of banks.
* Minor cosmetic update to main GUI.
* Updated docs.

2018-5-1 Will
* Improved CLI handling of instances.
* Fixed regression: Had killed LV2 again :(

2018-4-29 Will
* CLI can now close instances.
* Minor improvements to CLI instance controls.

2018-4-28 Will
* BugFix: Mixer Panel 'Edit' right click sometimes fails.
  Should open part editing window.
* Transferred instance generation to new controls.
* Added Instance generation to CLI.
* Updated docs.
* Formally implemented CLI current instance swapping.
  Still can't yet delete them.

2018-4-27 Will
* BugFix: External instrument load always went to part 1.

2018-4-26 Will
* Almost all part-level changes check for "Simple Sound".
  Just *entering* the editors doesn't now.

2018-4-25 Will
* Code cleanups.
* Added error checking and limits to scales (microtonal).
* Enabled MIDI-learn for some scales settings.
* Doc updates and corrections.
* Added highlights to learnable controls.

2018-4-22 Will
* 'autoInstance' disabled by default, set in config.
* Default state files handled correctly.
* BugFix: Build 1287 had broken LV2 :(

2018-4-19 Will
* Second attempt at autoloading :(
* Corrected changelog.
  Previous two were one commit.
* Still not handling user state files correctly :(

2018-4-18 Will
* First trial of autoloading other instances.
* Started refinements to MiscMsg.

2018-4-8 Will
* Minor code cleanups.
* Enabling a part now always makes it current.
  Disabling doesn't change which is current.
* Mixer Edit button now always opens the part window.

2018-4-1 Will
* BugFix: SubSynth detune type off by one error.
  GUI only, CLI was correct.
* Corrections to 'Note_Envelopes.txt'.
* BugFix: Base Func Parameters not updating RH graph.
  Actions were correct though.
* Corrected a bad reset :(

2018-3-30 Will
* Included 'AddSynth Morph' instrument in companion bank.