@@ -4,10 +4,12 @@ When enabled it continually checks that all notes at their entry to Yoshimi are 
 
 When working entirely within jack (including LV2) there should be no messages at all, but if using ALSA for either MIDI or audio there will sometimes be a few different depending on the complexity due to the buffering action.
 
-At any time hitting the GUI stop button will report the totals, but bear in mind this report is done *before* the stop cleanup so will show any notes that were still hanging at the time stop was hit.
+At any time hitting the GUI stop button will report the totals. However, this report is done *before* the stop cleanup so will show any notes that were still in the ring buffer at the time stop was hit.
 
-When you stop playing or a MIDI file has finished is the best time to check. You will then see the totals and there should be none shown as hanging.
+When you stop playing or a MIDI file has finished is the best time to check. You will then see the totals and there should be none shown as different.
 
 The master reset will zero all of these figures.
 
 Yoshimi's virtual keyboard is not supported by this system and will actually produce negative numbers!
+
+Bear in mind you can have more note_ons than note-offs as two note_ons at the same pitch and channel will both be cancelled by a single note_off. These will be reported as 'hannging' notes.
