@@ -1,6 +1,9 @@
 
-Multi instances produce jack errors if have been opened when
-main instance closed - been there since V 1.4.1 :(
+BUG! Marking bank instrument for swap, then attempting to change banks crashes - been there since V 1.4.1 :(
+
+BUG! Multi instances produce jack errors if have been opened when main instance closed - been there since V 1.4.1 :(
+
+BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well or better still loop back to try alsa.
 
 Realtime subnote
 
@@ -14,8 +17,6 @@ Edit button
 Requested: auto 'apply' timer for padsynth.
 
 Do a dual scan for banks so that IDd ones are found first, then any new ones picked up on the second scan. This stops known ones being re-ordered when 'foreign' entries appear from outside Yoshimi.
-
-Bug! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well or better still loop back to try alsa.
 
 Pasting effect doesn't update effect title.
 
